--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 body {
-  max-width: 600px;
+  max-width: 500px;
   display: block;
   margin: 20px auto;
-  background-image: linear-gradient(to right, #fad0c4 0%, #ffd1ff 100%);
+  background-image: linear-gradient(-20deg, #616161 0%, #9bc5c3 100%);
 }
 .container {
-  background: rgb(243, 234, 243);
-  border: 1px solid rgb(243, 234, 243);
+  background: rgb(212, 209, 212);
+  border: 1px solid rgb(212, 209, 212);
   border-radius: 15px;
   padding: 15px 15px 0;
 }
@@ -37,23 +37,19 @@ body {
 }
 .income,
 .expense {
-  border: 1px solid rgb(211, 207, 207);
+  border: 1px solid grey;
   text-align: center;
   margin: 10px;
   border-radius: 20px;
 }
 .arrow-down {
-  background: rgb(243, 234, 243);
   border-radius: 60px;
   font-size: 25px;
-  padding: 3px;
   color: green;
 }
 .arrow-up {
-  background: rgb(243, 234, 243);
   border-radius: 60px;
   font-size: 25px;
-  padding: 3px;
   color: red;
 }
 
@@ -65,8 +61,7 @@ li {
   list-style: none;
   border: 1px solid white;
   padding: 10px;
-  font-size: 25px;
-
+  font-size: 22px;
   text-transform: capitalize;
   font-weight: 500;
   border-radius: 15px;
@@ -103,12 +98,11 @@ li span {
   color: grey;
 }
 p {
-  font-size: 20px;
+  font-size: 19px;
 }
-
 .form-control {
   text-align: center;
-  font-size: 22px;
+  font-size: 21px;
 }
 button {
   background-image: linear-gradient(
